[gd_scene load_steps=21 format=3 uid="uid://dm20dvulbphf"]

[ext_resource type="FontFile" uid="uid://dckyut1557c7h" path="res://DarkTheme/Fonts/Ubuntu-L.ttf" id="1_ynbmn"]
[ext_resource type="FontFile" uid="uid://r7guvh1d66vn" path="res://Theme/HyperSuperItalic.ttf" id="2_88qo1"]
[ext_resource type="Script" path="res://Menu/Comment.gd" id="3_dfyi1"]
[ext_resource type="StyleBox" uid="uid://bf45466abjstu" path="res://Menu/DefaultPanel.tres" id="4_4legs"]
[ext_resource type="Texture2D" uid="uid://dpy6h2kebasv4" path="res://Sprites/logo.png" id="5_xr50h"]
[ext_resource type="FontFile" path="res://DarkTheme/Fonts/UbuntuFont.res" id="6_dciey"]
[ext_resource type="PackedScene" uid="uid://dhttk31mwa8pn" path="res://Menu/CommentTextField.tscn" id="7_388y6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl3p0"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4ewd"]
bg_color = Color(0.439216, 0.439216, 0.439216, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnfbv"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.352941, 0.780392, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofcni"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vuv8h"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dlqso"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aunuk"]
bg_color = Color(0.4, 0.4, 0.4, 0.65098)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocpm4"]
bg_color = Color(0.607843, 0.729412, 0.54902, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm2h7"]
bg_color = Color(0.866667, 0.298039, 0.305882, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.407843, 0.0980392, 0.109804, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjac4"]
bg_color = Color(0.498039, 0.901961, 0.352941, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef7yk"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.392157, 0.392157, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5lrt"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.258824, 0.258824, 0.258824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_kmj3i"]
default_font = ExtResource("2_88qo1")
default_font_size = 26
Button/styles/disabled = SubResource("StyleBoxFlat_xl3p0")
Button/styles/focus = SubResource("StyleBoxFlat_v4ewd")
Button/styles/hover = SubResource("StyleBoxFlat_gnfbv")
Button/styles/normal = SubResource("StyleBoxFlat_xl3p0")
Button/styles/pressed = SubResource("StyleBoxFlat_ofcni")
CheckBox/icons/checked = SubResource("PlaceholderTexture2D_vuv8h")
CheckBox/icons/unchecked = SubResource("PlaceholderTexture2D_dlqso")
CheckBox/styles/focus = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_ocpm4")
CheckBox/styles/normal = SubResource("StyleBoxFlat_gm2h7")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_cjac4")
LineEdit/colors/font_uneditable_color = Color(1, 1, 1, 1)
LineEdit/fonts/font = ExtResource("1_ynbmn")
LineEdit/styles/focus = SubResource("StyleBoxFlat_ef7yk")
LineEdit/styles/normal = SubResource("StyleBoxFlat_w5lrt")

[node name="Comment" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 175.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_kmj3i")
script = ExtResource("3_dfyi1")

[node name="Indent" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("4_4legs")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ProfilePicture" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_xr50h")
expand_mode = 3

[node name="Username" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_88qo1")
theme_override_font_sizes/font_size = 35
text = "Kutya"

[node name="Spacer" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Delete"

[node name="spacer4" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Comment" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_dciey")
theme_override_font_sizes/font_size = 24
text = "Very cool track :))"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="UpvoteButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "+1"

[node name="spacer" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Rating" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer2" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="DownvoteButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "-1"

[node name="spacer3" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="ReplyButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Reply"

[node name="spacer4" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ReplyContainer" parent="VBoxContainer" instance=ExtResource("7_388y6")]
unique_name_in_owner = true
visible = false
layout_mode = 2
